# mirrox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: README_zhcn.md  configuration.md  configuration_zhcn.md
examples/: config.example.toml
src/: cli.rs  config.rs  dns.rs  error.rs  lib.rs  main.rs  proxy.rs  rewrite.rs  routing.rs  scripts.rs  server.rs  upstream_proxy.rs
tests/: cli_tests.rs  config_tests.rs  protocol_tests.rs  proxy_tests.rs  rewrite_tests.rs  routing_tests.rs  server_tests.rs  upstream_proxy_tests.rs
tests/fixtures/tls/: api_bgm_tv.crt  api_bgm_tv.der  api_bgm_tv.key
